wecp initial commit

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,7 +4,7 @@
   background: linear-gradient(to right, #e9f7ef, #dbeafe);
   /* color: #198754; */
 ">
-  <a class="navbar-brand" href="#">Medical E&T System</a>
+  <a class="nav-link"  [routerLink]="['/dashboard']">MediLink</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -32,9 +32,9 @@
  
   
     <ul class="navbar-nav">
-      <li *ngIf="!IsLoggin" class="nav-item">
+      <!-- <li *ngIf="!IsLoggin" class="nav-item">
         <a class="nav-link" [routerLink]="['/login']">Login</a>
-      </li>
+      </li> -->
       <li *ngIf="IsLoggin" class="nav-item">
         <a class="nav-link" (click)="logout()" [routerLink]="['/login']">Logout</a>
       </li>
