--- a/client/src/app/dashbaord/dashbaord.component.html
+++ b/client/src/app/dashbaord/dashbaord.component.html
@@ -1,3 +1,26 @@
-<div class="row text-center">
-<h1 class="text-capitalize">Medical Equipment & Tracking System</h1>
+<div class="container-fluid d-flex flex-column justify-content-center align-items-center"
+     style="height: 120vh; background: url('assets/images/equipment2.jpg') no-repeat center center / cover;">
+  
+  <h1 class="text-black fw-bold mb-4">Medical Equipment & Tracking System</h1>
+
+  <div class="row w-75 text-center">
+    <div class="col-md-4 mb-3">
+      <div class="stat-card p-4">
+        <h5>Hospitals</h5>
+        <h3>{{countHospitals}}</h3>
+      </div>
+    </div>
+    <div class="col-md-4 mb-3">
+      <div class="stat-card p-4">
+        <h5>Orders</h5>
+        <h3>{{countOrders}}</h3>
+      </div>
+    </div>
+    <div class="col-md-4 mb-3">
+      <div class="stat-card p-4">
+        <h5>Maintenances</h5>
+        <h3>{{countServices}}</h3>
+      </div>
+    </div>
+  </div>
 </div>
